2008-08-05  Stefan Kost  <ensonic@users.sf.net>

	* gst/wavparse/gstwavparse.c:
	  Refactor wavparse. Call _reset() from dispose() and move old code from
	  dispose into reset. This way we don't leak taglists when we abort
	  parsing. Fix some comments. Move code for skipping a chunk into extra
	  function. Replace chunk sizes with a const to ease readability.	  

2008-08-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Aurelien Grimaud <gstelzz at yahoo dot fr>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_alloc_udp_ports):
	Improve udp port setup. Fixes #545710.

2008-08-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtp.c: (plugin_init):
	* gst/rtp/gstrtpmp1sdepay.c: (gst_rtp_mp1s_depay_base_init),
	(gst_rtp_mp1s_depay_class_init), (gst_rtp_mp1s_depay_init),
	(gst_rtp_mp1s_depay_setcaps), (gst_rtp_mp1s_depay_process),
	(gst_rtp_mp1s_depay_set_property),
	(gst_rtp_mp1s_depay_get_property),
	(gst_rtp_mp1s_depay_change_state),
	(gst_rtp_mp1s_depay_plugin_init):
	* gst/rtp/gstrtpmp1sdepay.h:
	Add MP1S depayloader.

	* gst/rtsp/URLS:
	Some more sample rtsp streams.

2008-08-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/URLS:
	Add another URL.

	* tests/check/elements/id3v2mux.c: (test_taglib_id3mux_with_tags):
	* tests/check/elements/rglimiter.c: (GST_START_TEST):
	Add some more debug info.

2008-08-04  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/avi/gstavimux.c: (gst_avi_mux_riff_get_avi_header):
	Provide cbSize field for audio extra_data size, and take care to
	pad extra_data.

2008-08-04  Stefan Kost  <ensonic@users.sf.net>

	* gst/qtdemux/qtdemux.c:
	  Return the result of gst_pad_{start,stop}_task instead of hard-coded
	  TRUE.

2008-08-04  Stefan Kost  <ensonic@users.sf.net>

	* gst/qtdemux/qtdemux.c:
	* gst/qtdemux/qtdemux_fourcc.h:
	  Add keyword tag support. Fixes #520694 for qtdemux.

2008-08-04  Stefan Kost  <ensonic@users.sf.net>

	* gst/qtdemux/qtdemux.c: